--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,3 @@
-#root {
-  max-width: 1280px;
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.hello {
-  font-size: 2em;
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
